Changed the state machine, added more buttons, general improvements