@@ -14,13 +14,13 @@ public class Scene {
 
 	private final int pandaNumber;
 	private final ArrayList<Panda> pandas;
-	private final ArrayList<Object> objects;
+	private final ArrayList<DrawableObject> objects;
 	private final Dimension screenSize;
 
 	private int objectNumber;
-	
+
 	public Scene(Dimension screenSize) {
-        this.graphicState = new EmptyState(this);
+		this.graphicState = EmptyState.getInstance(this);
 		this.screenSize = screenSize;
 
 		pandaNumber = this.screenSize.width / PANDA_SIZE;
@@ -32,20 +32,13 @@ public class Scene {
 	public ArrayList<Panda> getPandas() { // used for testing
 		return pandas;
 	}
-	
+
 	public void createBambooForest() {
 		objects.clear();
 		objectNumber = 200;
 		for (int i = 0; i < objectNumber; i++) {
 			objects.add(new Bamboo(RandomNumber.between(OBJECT_MIN_HEIGHT, OBJECT_MAX_HEIGHT),
-					RandomNumber.between(50, screenSize.width - 100),
-					RandomNumber.between(300, screenSize.height)));
-		}
-	}
-
-	public void drawBambooForest() {
-		for (Object object : objects) {
-			((Bamboo) object).draw();
+					RandomNumber.between(50, screenSize.width - 100), RandomNumber.between(300, screenSize.height)));
 		}
 	}
 
@@ -54,14 +47,7 @@ public class Scene {
 		objectNumber = 30;
 		for (int i = 0; i < objectNumber; i++) {
 			objects.add(new Tree(RandomNumber.between(OBJECT_MIN_HEIGHT, OBJECT_MAX_HEIGHT),
-					RandomNumber.between(50, screenSize.width - 100),
-					RandomNumber.between(300, screenSize.height)));
-		}
-	}
-
-	public void drawTreeForest() {
-		for (Object object : objects) {
-			((Tree) object).draw();
+					RandomNumber.between(50, screenSize.width - 100), RandomNumber.between(300, screenSize.height)));
 		}
 	}
 
@@ -70,36 +56,26 @@ public class Scene {
 		objectNumber = 15;
 		for (int i = 0; i < objectNumber; i++) {
 			objects.add(new Bush(RandomNumber.between(OBJECT_MIN_HEIGHT + 200, OBJECT_MAX_HEIGHT + 200),
-					RandomNumber.between(50, screenSize.width - 100),
-					RandomNumber.between(300, screenSize.height)));
-		}
-	}
-
-	public void drawBushForest() {
-		for (Object object : objects) {
-			((Bush) object).draw();
+					RandomNumber.between(50, screenSize.width - 100), RandomNumber.between(300, screenSize.height)));
 		}
 	}
 
 	public void changeObjectNumber(int newObjectNumber) {
 		if (newObjectNumber < objectNumber) {
 			for (int i = 0; i < objectNumber - newObjectNumber; i++) {
-				objects.removeLast();
+				objects.remove(objects.size() - 1);
 			}
-		}
-		else {
+		} else {
 			for (int i = 0; i < newObjectNumber - objectNumber; i++) {
 				if (getState() instanceof BambooForestState) {
 					objects.add(new Bamboo(RandomNumber.between(OBJECT_MIN_HEIGHT, OBJECT_MAX_HEIGHT),
 							RandomNumber.between(50, screenSize.width - 100),
 							RandomNumber.between(300, screenSize.height)));
-				}
-				else if (getState() instanceof TreeForestState) {
+				} else if (getState() instanceof TreeForestState) {
 					objects.add(new Tree(RandomNumber.between(OBJECT_MIN_HEIGHT, OBJECT_MAX_HEIGHT),
 							RandomNumber.between(50, screenSize.width - 100),
 							RandomNumber.between(300, screenSize.height)));
-				}
-				else if (getState() instanceof BushesState) {
+				} else if (getState() instanceof BushesState) {
 					objects.add(new Bush(RandomNumber.between(OBJECT_MIN_HEIGHT + 200, OBJECT_MAX_HEIGHT + 200),
 							RandomNumber.between(50, screenSize.width - 100),
 							RandomNumber.between(300, screenSize.height)));
@@ -108,11 +84,11 @@ public class Scene {
 		}
 		objectNumber = newObjectNumber;
 	}
-		
+
 	public void createPandas() {
 		pandas.add(new Panda(RandomNumber.between(50, screenSize.width - 300),
 				RandomNumber.between(250, screenSize.height - 150), PANDA_SIZE, PANDA_SIZE));
-		
+
 		Panda current;
 		for (int i = 0; i < pandaNumber; i++) {
 			do {
@@ -131,25 +107,34 @@ public class Scene {
 		return objectNumber;
 	}
 
-	
 	public boolean pandaIntersects(Panda panda) {
 		return pandas.stream().anyMatch(panda::intersects);
 	}
-	
+
 	public void draw() {
-		graphicState.apply();
+		for (DrawableObject obj : objects) {
+			obj.draw();
+		}
 
 		for (Panda panda : pandas) {
 			panda.draw();
 		}
 	}
 
-	public void changeState() {
-		graphicState = graphicState.nextState();
+	public void changeToBamboos() {
+		graphicState = graphicState.drawBamboos();
+	}
+	
+	public void changeToTrees() {
+		graphicState = graphicState.drawTrees();
+	}
+	
+	public void changeToBushes() {
+		graphicState = graphicState.drawBushes();
 	}
 
 	public void removeState() {
-		graphicState = new EmptyState(this);
+		graphicState = graphicState.erase();
 	}
 
 	public LayoutState getState() {
@@ -168,4 +153,3 @@ public class Scene {
 		}
 	}
 }
-
